<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:soundEffectsEnabled="false"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FAF8F8"
            android:textSize="52sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:text="@string/username"
            android:paddingHorizontal="10dp"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#FAF8F8"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/white"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:text="@string/password"
            android:paddingHorizontal="10dp"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#FAF8F8"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/white"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="12dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="30dp"
            app:elevation="20dp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_login_facebook"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/login_facebook"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="30dp"
            app:elevation="20dp" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/login_google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="30dp"
            app:elevation="20dp" />

    </LinearLayout>

</RelativeLayout>